fixed bug: text-overflow

--- a/develop/scss/style.scss
+++ b/develop/scss/style.scss
@@ -7,7 +7,6 @@
 @include reset();
 
 .debug { // grid help
-
 	//@include debug(rgba(0,0,0, 0.3), 1px solid gray);	
 }
 .container {	
@@ -132,26 +131,34 @@
 	margin: 0 auto;
 
 	&__title { 
+		width: 600px;
+		margin: 0 auto;
 		margin-bottom: 52px;
 		@include intro-title;		 
 		text-align: center;
-		color: $white;		
+		color: $white;	
+		//border: 1px solid red;	
 
 		//__________media
 		@include cellphone-block {
+			width: 480px;
 			font-size: 32px;
 		}
 		@include smalldevice-block {
+			width: 300px;
 			margin-bottom: 30px;
 			font-size: 24px;
 		}		
 	}
 	&__main-title {
+		//width: 900px;
+		//margin: 0 auto;
 		margin-bottom: 60px;
 		@include intro-main-title;  
 		text-transform: uppercase;
 		text-align: center;
 		color: $white;
+		//border: 1px solid red;
 
 		//__________media
 		@include tabletka-block {			
@@ -178,6 +185,7 @@
 	}
 }
 .main-page__btn {
+	margin-bottom: 40px;
 	padding: 25px 50px;
 	border: 1px solid $main-yellow;
 	border-radius: 4px;
@@ -226,24 +234,33 @@
 		}
 	}
 	&__main-title {
+		width: 430px;
+		margin: 0 auto;
+		margin-bottom: 20px;
 		@include section-title;
 		text-align: center;
 		text-transform: uppercase;
 		color: $black-text;
+		//border: 1px solid red;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 34px;
+			width: 310px;
+			font-size: 28px;
+			line-height: 1.4;
 		}
 	}
 	&__about {
+		margin: 0 auto;
 		@include section-subtitle;
+		line-height: 1.2;
 		text-align: center;
 		color: $gray-text;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 14px;
+			width: 300px;
+			font-size: 14px;			
 		}
 	}
 	&__items {		
@@ -274,12 +291,16 @@
 		.item-icon {
 			width: 74px;
 			height: 73px;	
-			margin-bottom: 15px;  									
+			margin-bottom: 18px;  									
 		}
 		.item-title {
+			width: 160px;
+			margin-bottom: 18px;
 			@include item-title;
+			line-height: 1.4;
 			text-align: center;
 			color: $black-text;
+			//border: 1px solid red;
 		}
 		.item-dscr {
 			@include item-subtitle;
@@ -310,24 +331,33 @@
 		}
 	}
 	&__main-title {
+		width: 430px;
+		margin: 0 auto;
+		margin-bottom: 20px;
 		@include section-title;
 		text-align: center;
 		text-transform: uppercase;
 		color: $black-text;
+		//border: 1px solid red;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 32px;
+			width: 310px;
+			font-size: 28px;
+			line-height: 1.4;
 		}
 	}
 	&__about { 
+		margin: 0 auto;
 		@include section-subtitle;
+		line-height: 1.2;
 		text-align: center;
 		color: $gray-text;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 14px;
+			width: 300px;
+			font-size: 14px;			
 		}
 	}
 	&__items {		
@@ -368,8 +398,12 @@
 			margin-bottom: 20px;  									
 		}
 		.item-title {
+			width: 210px;
+			margin: 0 auto;
+			margin-bottom: 10px;
 			@include item-title;
 			text-align: center;
+			line-height: 1.6;
 			color: $black-text;
 			&:active,
 			&:focus,
@@ -378,6 +412,9 @@
 			}
 		}
 		.item-dscr {
+			width: 210px;
+			margin: 0 auto;
+			margin-top: auto;
 			margin-bottom: 30px;
 			@include item-subtitle;
 			line-height: 1;
@@ -412,25 +449,34 @@
 		}
 	}
 	&__main-title {
-		@include section-title;
+		width: 430px;
+		margin: 0 auto;
+		margin-bottom: 20px;
+		@include section-title;		
 		text-align: center;
 		text-transform: uppercase;
 		color: $black-text;
+		//border: 1px solid red;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 32px;
+			width: 310px;
+			font-size: 28px;
+			line-height: 1.4;
 		}
 	}
 	&__about-us {
+		margin: 0 auto;
 		@include section-subtitle;
+		line-height: 1.2;
 		text-align: center;
 		color: $gray-text;
 
 		//__________media
 		@include smalldevice-block {
+			width: 300px;
 			font-size: 14px;
-		}
+		}		
 	}
 	&__items {		
 		@include row-flex();
@@ -592,26 +638,34 @@
 		}
 	}
 	&__main-title {
+		width: 430px;
+		margin: 0 auto;
+		margin-bottom: 20px;
 		@include section-title;
 		text-align: center;
 		text-transform: uppercase;
 		color: $black-text;
+		//border: 1px solid red;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 32px;
-			line-height: 47px;
+			width: 310px;
+			font-size: 28px;
+			line-height: 1.4;
 		}
 	}
 	&__about { 
+		margin: 0 auto;
+		margin-bottom: 20px;
 		@include section-subtitle;
+		line-height: 1.2;
 		text-align: center;
 		color: $gray-text;
 
 		//__________media
 		@include smalldevice-block {
+			width: 300px;
 			font-size: 14px;
-			margin-top: 25px;
 		}
 	}
 	&__info {
@@ -674,12 +728,19 @@
 			}
 		}
 		.item-name {
+			width: 300px;
+			margin: 0 auto;
 			@include item-title;
+			line-height: 1.6;
+			text-align: center;
 		}
 		.item-job {
+			width: 300px;
+			margin: 0 auto;
+			margin-bottom: 15px;
 			@include item-subtitle;
 			color: $gray-text;
-			margin-bottom: 15px;
+			text-align: center;
 		}
 		.item-social {
 
@@ -843,23 +904,32 @@
 		}
 	}
 	&__main-title {
+		width: 430px;
+		margin: 0 auto;
+		margin-bottom: 20px;
 		@include section-title;
 		text-align: center;
 		text-transform: uppercase;
 		color: $white;
+		//border: 1px solid red;
 
 		//__________media
 		@include smalldevice-block {
-			font-size: 32px;
+			width: 310px;
+			font-size: 28px;
+			line-height: 1.4;
 		}
 	}
 	&__about { 
+		margin: 0 auto;
 		@include section-subtitle;
+		line-height: 1.2;
 		text-align: center;
 		color: $gray-text;
 
 		//__________media
 		@include smalldevice-block {
+			width: 300px;
 			font-size: 14px;
 		}
 	}
